ConjuntoDeFerramentas/old/transmission/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-deployment
  namespace: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: linuxserver/transmission:latest
        ports:
        - containerPort: 9091
        volumeMounts:
        - name: media-storage
          mountPath: /downloads
      volumes:
      - name: media-storage
        persistentVolumeClaim:
          claimName: media-transmission-claim
