ConjuntoDeFerramentas/old/transmission/transmission-service.yml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service
  namespace: transmission
spec:
  selector:
    app: transmission
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9091
  type: ClusterIP
