ConjuntoDeFerramentas/old/transmission/transmission-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
  namespace: transmission
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: transmission.rancher-ks8.pve.datacenter.tsc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission-service
            port:
              number: 80
